syntax = "proto3";

package market.v1;

import "google/protobuf/wrappers.proto";

option go_package = "market-engine-go/gen/go/market/v1";

message StreamTradesRequest {
  int32 interval_ms = 1;
}

message StreamTradesResponse {
  string id = 1;
  string ticker = 2;
  double price = 3;
  int32 size = 4;
  string side = 5;
  string timestamp = 6;
}

service MarketService {
  rpc StreamTrades(StreamTradesRequest) returns (stream StreamTradesResponse);
  rpc GetTickers(GetTickersRequest) returns (GetTickersResponse) {}
  rpc StreamTickers(stream StreamTickersRequest) returns (stream StreamTickersResponse);
}

message GetTickersRequest {}

message GetTickersResponse {
  repeated TickerData tickers = 1;
}

message TickerData {
  string symbol = 1;
  double price = 2;
  string name = 3;
}

message StreamTickersRequest {
  repeated string symbols = 1;
}

message StreamTickersResponse {
  string symbol = 1;
  double price = 2;
  google.protobuf.Int32Value change = 3;
  int64 timestamp = 4;
}
